Add comment functionality, add post a suggetion funtionality, optimise UI interface of suggestions section

--- a/quickstart/data/coding-vs-essay.yaml
+++ b/quickstart/data/coding-vs-essay.yaml
@@ -1,3 +1,3 @@
-labels: ["反馈质量", "任务清晰度", "匿名性影响"]
+labels: ["Feedback Quality", "Clarity of Tasks", "Implications of Anonymity"]
 coding: [3.2, 4.1, 3.8]
 essay: [4.5, 4.3, 4.0]
