Complete search functionality, add tags and categories for content filtering

--- a/quickstart/hugo.toml
+++ b/quickstart/hugo.toml
@@ -48,6 +48,6 @@ disqusShortname = "project-bnl3amf11h"
   [outputs]
   home = ["HTML", "RSS", "JSON"]
 
-
- 
- 
+ [taxonomies]
+  category = "categories"
+  tag = "tags"
