--- a/quickstart/hugo.toml
+++ b/quickstart/hugo.toml
@@ -35,6 +35,11 @@ disqusShortname = "project-bnl3amf11h"
     url = "/blog"
     weight = 5
 
+  [[menu.main]]
+    name = "Tools"
+    url = "/tools/"
+    weight = 6
+
  
  [markup]
   [markup.goldmark]
