--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -1,3 +1,4 @@
+# name: Deploy Hugo site to Pages
 name: Deploy Hugo site to Pages
 
 on:
@@ -58,7 +59,7 @@ jobs:
           hugo --minify --baseURL "${{ steps.pages.outputs.base_url }}/"
 
       - name: Upload artifact
-        uses: actions/upload-pages-artifact@v2
+        uses: actions/upload-pages-artifact@v1
         with:
           path: ./quickstart/public
 
