--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -1,64 +1,26 @@
-# name: Deploy Hugo site to Pages
-name: Deploy Hugo site to Pages
+# 已禁用的 GitHub Actions 工作流
+name: DISABLED - Hugo site deployment
 
 on:
-  # 恢复自动部署功能
-  push:
-    branches: ["main"]
+  # 仅在手动触发时执行，实际上已完全禁用
   workflow_dispatch:
+  # push:
+  #   branches: ["main"]
 
-# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
-permissions:
-  contents: read
-  pages: write
-  id-token: write
+# 以下内容保留仅作参考
+# permissions:
+#   contents: read
+#   pages: write
+#   id-token: write
 
-# Allow only one concurrent deployment
-concurrency:
-  group: "pages"
-  cancel-in-progress: true
+# concurrency:
+#   group: "pages"
+#   cancel-in-progress: true
 
 jobs:
-  # Build job
-  build:
+  # 空作业，不执行任何操作
+  disabled:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-        with:
-          submodules: recursive
-      
-      - name: Setup Hugo
-        uses: peaceiris/actions-hugo@v2
-        with:
-          hugo-version: '0.115.4'
-          extended: true
-
-      - name: Setup Pages
-        id: pages
-        uses: actions/configure-pages@v3
-
-      - name: Build with Hugo
-        run: |
-          cd quickstart
-          npm ci
-          # 使用固定的正确 baseURL，不再使用动态变量
-          hugo --minify --baseURL "https://cswenyuanxiao.github.io/SingleProject/"
-      
-      # 使用更简单的方式上传构建产物
-      - name: Upload Pages artifact
-        uses: actions/upload-pages-artifact@v1
-        with:
-          path: ./quickstart/public
-
-  # 恢复部署作业
-  deploy:
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
-      - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v2 
+      - name: This workflow is disabled
+        run: echo "This workflow has been disabled" && exit 0 
